[gd_scene load_steps=60 format=3 uid="uid://dia37ga3v00ss"]

[ext_resource type="Script" uid="uid://c06x1tdi7avmw" path="res://scenes/main.gd" id="1_o6xl0"]
[ext_resource type="VideoStream" uid="uid://d1jt2puunbl5d" path="res://assets/backgrounds/background2.ogv" id="2_choun"]
[ext_resource type="Texture2D" uid="uid://chg7sa33ywu3v" path="res://assets/characters/walk.png" id="3_choun"]
[ext_resource type="Texture2D" uid="uid://chxt6n4t58b2e" path="res://assets/icons/MediumArrow-Right@0.5x.png" id="3_jyhfs"]
[ext_resource type="Texture2D" uid="uid://dwmj560emqnft" path="res://assets/icons/MediumArrow-Left@0.5x.png" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://cln6x7k4w4v5y" path="res://assets/icons/right.png" id="5_choun"]
[ext_resource type="Texture2D" uid="uid://tk7bge0f0xrk" path="res://assets/icons/Music-On@0.5x.png" id="5_tefeu"]
[ext_resource type="Texture2D" uid="uid://dmrnt8mdkcsls" path="res://assets/icons/Music-Off@0.5x.png" id="6_o6xl0"]
[ext_resource type="Texture2D" uid="uid://c0j54g0ngqyk4" path="res://assets/icons/left.png" id="7_ya4ey"]
[ext_resource type="AudioStream" uid="uid://jfveh31esrgq" path="res://assets/music/massobeats - rose water (royalty free lofi music).mp3" id="8_choun"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ya4ey"]
atlas = ExtResource("3_choun")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb6dy"]
atlas = ExtResource("3_choun")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_trceg"]
atlas = ExtResource("3_choun")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8y0u"]
atlas = ExtResource("3_choun")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkv2x"]
atlas = ExtResource("3_choun")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbj1t"]
atlas = ExtResource("3_choun")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_muem4"]
atlas = ExtResource("3_choun")
region = Rect2(288, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3eg"]
atlas = ExtResource("3_choun")
region = Rect2(336, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ld40"]
atlas = ExtResource("3_choun")
region = Rect2(0, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqmmt"]
atlas = ExtResource("3_choun")
region = Rect2(48, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc10j"]
atlas = ExtResource("3_choun")
region = Rect2(96, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jscy8"]
atlas = ExtResource("3_choun")
region = Rect2(144, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm3ni"]
atlas = ExtResource("3_choun")
region = Rect2(192, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6deb"]
atlas = ExtResource("3_choun")
region = Rect2(240, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1vs"]
atlas = ExtResource("3_choun")
region = Rect2(288, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wyq8"]
atlas = ExtResource("3_choun")
region = Rect2(336, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxglm"]
atlas = ExtResource("3_choun")
region = Rect2(0, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f3dj"]
atlas = ExtResource("3_choun")
region = Rect2(48, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq6so"]
atlas = ExtResource("3_choun")
region = Rect2(96, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv21b"]
atlas = ExtResource("3_choun")
region = Rect2(144, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tel4y"]
atlas = ExtResource("3_choun")
region = Rect2(192, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkpxi"]
atlas = ExtResource("3_choun")
region = Rect2(240, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q0nq"]
atlas = ExtResource("3_choun")
region = Rect2(288, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgi5k"]
atlas = ExtResource("3_choun")
region = Rect2(336, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8jky"]
atlas = ExtResource("3_choun")
region = Rect2(0, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmb1v"]
atlas = ExtResource("3_choun")
region = Rect2(48, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuf3a"]
atlas = ExtResource("3_choun")
region = Rect2(96, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pibwh"]
atlas = ExtResource("3_choun")
region = Rect2(144, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6pm6"]
atlas = ExtResource("3_choun")
region = Rect2(192, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5he1u"]
atlas = ExtResource("3_choun")
region = Rect2(240, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5poiv"]
atlas = ExtResource("3_choun")
region = Rect2(288, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cjbq"]
atlas = ExtResource("3_choun")
region = Rect2(336, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chjal"]
atlas = ExtResource("3_choun")
region = Rect2(0, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjqg0"]
atlas = ExtResource("3_choun")
region = Rect2(48, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vchkt"]
atlas = ExtResource("3_choun")
region = Rect2(96, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_txyw0"]
atlas = ExtResource("3_choun")
region = Rect2(144, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc5cj"]
atlas = ExtResource("3_choun")
region = Rect2(192, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvyfr"]
atlas = ExtResource("3_choun")
region = Rect2(240, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty1g6"]
atlas = ExtResource("3_choun")
region = Rect2(288, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2jfr"]
atlas = ExtResource("3_choun")
region = Rect2(336, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjg73"]
atlas = ExtResource("3_choun")
region = Rect2(0, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu4jf"]
atlas = ExtResource("3_choun")
region = Rect2(48, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ddy"]
atlas = ExtResource("3_choun")
region = Rect2(96, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0loja"]
atlas = ExtResource("3_choun")
region = Rect2(144, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ids8r"]
atlas = ExtResource("3_choun")
region = Rect2(192, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnhof"]
atlas = ExtResource("3_choun")
region = Rect2(240, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v6qk"]
atlas = ExtResource("3_choun")
region = Rect2(288, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_augu2"]
atlas = ExtResource("3_choun")
region = Rect2(336, 64, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tefeu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya4ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb6dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trceg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8y0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkv2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbj1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muem4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3eg")
}],
"loop": true,
"name": &"idle0",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ld40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqmmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc10j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jscy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm3ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6deb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wyq8")
}],
"loop": true,
"name": &"idle1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxglm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f3dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq6so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv21b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tel4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkpxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q0nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgi5k")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8jky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmb1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuf3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pibwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6pm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5he1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5poiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cjbq")
}],
"loop": true,
"name": &"idle3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chjal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjqg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vchkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txyw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc5cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvyfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty1g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2jfr")
}],
"loop": true,
"name": &"idle4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjg73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu4jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7ddy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0loja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ids8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnhof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v6qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_augu2")
}],
"loop": true,
"name": &"idle5",
"speed": 8.0
}]

[node name="Main" type="Control"]
layout_mode = 3
anchor_right = 0.286
anchor_bottom = 0.287
offset_right = -0.472015
offset_bottom = 0.0240021
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6xl0")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
modulate = Color(0.544974, 0.544974, 0.544974, 1)
self_modulate = Color(0.925487, 0.968632, 0.994261, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = -1.898
anchor_right = 1.024
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 160.028
offset_right = -5.89603
offset_bottom = 1.0
stream = ExtResource("2_choun")
autoplay = true
expand = true
loop = true

[node name="Character" type="AnimatedSprite2D" parent="."]
position = Vector2(165, 90)
scale = Vector2(3.82812, 3.4594)
sprite_frames = SubResource("SpriteFrames_tefeu")
animation = &"idle5"
autoplay = "idle0"
frame_progress = 0.956965

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(165, 93)
zoom = Vector2(3.5, 3.5)

[node name="BtnRight" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 82.0
offset_right = 238.0
offset_bottom = 110.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_jyhfs")
texture_pressed = ExtResource("5_choun")

[node name="BtnLeft" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 82.0
offset_right = 124.0
offset_bottom = 110.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_tbgi4")
texture_pressed = ExtResource("7_ya4ey")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(310, 58)
stream = ExtResource("8_choun")
autoplay = true

[node name="BtnSound" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 295.0
offset_top = 6.0
offset_right = 323.0
offset_bottom = 34.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("6_o6xl0")
texture_pressed = ExtResource("5_tefeu")

[connection signal="pressed" from="BtnRight" to="." method="_on_btn_right_pressed"]
[connection signal="pressed" from="BtnLeft" to="." method="_on_btn_left_pressed"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
[connection signal="pressed" from="BtnSound" to="." method="_on_btn_sound_pressed"]
[connection signal="toggled" from="BtnSound" to="." method="_on_btn_sound_toggled"]
